style(global-filters): Fixed z-index issues

--- a/src/app/dashboard/components/current-dashboard-title/current-dashboard-title.component.scss
+++ b/src/app/dashboard/components/current-dashboard-title/current-dashboard-title.component.scss
@@ -1,7 +1,7 @@
 .current-dashboard-title {
   display: flex;
   align-items: center;
-  font-size: 15px;
+  font-size: 17px;
   font-weight: 500;
 }
 
